<resources>
    <string name="app_name">Activate</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full name</string>
    <string name="username">UserName</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_address">Full Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
</resources>